--- a/books/package.json
+++ b/books/package.json
@@ -9,11 +9,13 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "dotenv": "^1.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "knex": "^0.9.0",
     "morgan": "~1.6.1",
     "pg": "^4.4.3",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "unirest": "^0.4.2"
   }
 }
